Changes for future - channel types

--- a/discord_bot/src/templates/index.html
+++ b/discord_bot/src/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>DiS3cord{{ anonymous }}file upload for #{{ channel_name }}</h1>
+    <h1>DiS3cord{{ anonymous }}file upload for {{ channel_name }}</h1>
 
     <div id="drop-area">
         <p id="text">Drag & Drop a file here or click to select a file</p>
